--- a/src/login.html
+++ b/src/login.html
@@ -31,7 +31,7 @@
                   </label>
                   <span class="psw">Forgot <a href="#">password?</a></span> 
 
-                  <button  class="btn1" type="submit">Login with</button>
+                  <button  class="btn1" type="submit">Login</button>
                   
 
                   <button class="btn2" type="submit">
