--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
                   
                 </span><br>
                 <span>
-                    <input type="psassword" placeholder="Comfirm password" name="Comfirm password" required>
+                    <input type="password" placeholder="Comfirm password" name="Comfirm password" required>
                     <div class="ftb">
                         <!-- <p >5-10 character</p> -->
                     </div>
