--- a/src/index.html
+++ b/src/index.html
@@ -71,7 +71,7 @@
 
                 <div class="text">
                     <h6>Already a Member?</h6>
-                    <a href="#" class="toggle">Sign up</a>
+                    <a href="#" class="toggle">Sign In</a>
                   </div>
                
               </div>
