--- a/src/reset.html
+++ b/src/reset.html
@@ -1,31 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>reset password</title>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Confirm Password </title>
     <link rel="stylesheet" href="style.css">
-</head>
-<body>
- 
-    <div id="reset-form-wrap">
-    <h2>Login</h2>
-    <form id="reset-form">
-      <p>
-      <input type="password"   minlength="10" id="password" name="password" placeholder="Enter password" required><i class="validation"><span></span><span></span></i>
-      </p>
-      <p>
-      <input type="password" minlength="10"  id="password" name="confirm-password" placeholder="Comfirm Password" required><i class="validation"><span></span><span></span></i>
-      </p>
-      <p>
-      <input type="submit" id="login" value="reset password">
-      </p>
-    </form>
-    <div id="reset-password-wrap">
-      <!-- <p>back to <a href="#">login</a><p> -->
+  </head>
+  <body>
+   
+   
+    <div class="container">
+      <header>Reset Password</header>
+      <form action="#">
+        <div class="error-text"></div>
+        <div class="field">
+          <input onkeyup="active()" id="pswrd_1" type="password" placeholder="Enter Password" required>
+        </div>
+        <div class="field">
+          <input onkeyup="active_2()" id="pswrd_2" disabled type="password" placeholder="Confirm Password"required>
+          <div class="show">SHOW</div>
+        </div>
+        <button  disabled class="resetbtn">reset password</button>
+        <!-- <button disabled>Confirm</button> -->
+      </form>
     </div>
-  </div>
- 
-</body>
+
+   <script src="script.js"></script>
+
+  </body>
 </html>
