User Account Dashboard

--- a/src/account.html
+++ b/src/account.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Balance</title>
+    <title> User Balance</title>
     <!-- Boxicons Link -->
 	<link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
     <!-- CUSTOM CSS LINK  -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
      <!-- <div class="link">
@@ -23,43 +23,38 @@
 		</a>
 		<ul class="side-menu top">
 			<li class="active">
-				<a href="#">
+				<a href="index.html">
 					<i class='bx bxs-dashboard' ></i>
 					<span class="text">Dashboard</span>
 				</a>
 			</li>
 			<li>
-				<a href="index.html">
+				<a href="account.html">
 					<i class='bx bxs-user-account' ></i>
 					<span class="text">My Account</span>
 				</a>
 			</li>
 			<li>
-				<a href="#">
+				<a href="payment.html">
 					<i class='bx bx-money' ></i>
 				  <span class="text">Payment</span>
 				</a>
 			</li>
 			<li>
-				<a href="#">
+				<a href="view.html">
 					<i class='bx bxs-bank' ></i>
-					<span class="text">Transfer</span>
+					<span class="text">Transfer Histroy</span>
 				</a>
 			</li>
 			<li>
-				<a href="#">
+				<a href="card.html">
 					<i class='bx bxs-credit-card' ></i>
 					<span class="text">Card</span>
 				</a>
 			</li>
 		</ul>
 		<ul class="side-menu">
-			<li>
-				<a href="#">
-					<i class='bx bxs-cog' ></i>
-					<span class="text">Settings</span>
-				</a>
-			</li>
+			
 			<li>
 				<a href="#" class="logout">
 					
@@ -144,6 +139,6 @@
   
       <!-- <script type="text/javascript" src="bank_account_script.js"></script>
       <script type="text/javascript" src="typewriter_script.js"></script> -->
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
