--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 	<!-- Boxicons Link -->
 	<link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
 <!-- CUSTOM CSS LINK  -->
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="css/style.css">
 
 	<title>User Dashboard</title>
 </head>
@@ -19,7 +19,7 @@
 	<section id="sidebar">
 		<a href="#" class="brand">
 			<i class='bx bxs-user'></i>
-			<span class="text">User</span>
+		
 		</a>
 		<ul class="side-menu top">
 			<li class="active">
@@ -41,25 +41,20 @@
 				</a>
 			</li>
 			<li>
-				<a href="#">
+				<a href="view.html">
 					<i class='bx bxs-bank' ></i>
-					<span class="text">Transfer</span>
+					<span class="text">Transfer Histroy</span>
 				</a>
 			</li>
 			<li>
-				<a href="#">
+				<a href="card.html">
 					<i class='bx bxs-credit-card' ></i>
 					<span class="text">Card</span>
 				</a>
 			</li>
 		</ul>
 		<ul class="side-menu">
-			<li>
-				<a href="#">
-					<i class='bx bxs-cog' ></i>
-					<span class="text">Settings</span>
-				</a>
-			</li>
+			
 			<li>
 				<a href="#" class="logout">
 					
@@ -122,7 +117,7 @@
 				<li>
 					<i class='bx bxs-dollar-circle' ></i>
 					<span class="text">
-						<h3>My Balance</h3>
+						<h3>Main Balance</h3>
 						 <a href="#"><p>$34,010.00</p></a>
 					</span>
 				</li>
@@ -290,6 +285,6 @@
 	<!-- CONTENT -->
 	
 
-	<script src="script.js"></script>
+	<script src="js/script.js"></script>
 </body>
 </html>
