--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,11 +10,35 @@
 </head>
 
 <body>
-   <!-- Navagation bar start  -->
-    <div class="container">
-        <div class="navigation">
-            <ul>
-                
+    <!-- header start  -->
+    <section class="header">
+        <div class="logo">
+            <i class="ri-menu-line icon icon-0 menu"></i>
+            <h2>Adm<span>in</span></h2>
+        </div>
+        <div class="search--notification--profile">
+            <div class="search">
+                <input type="text" placeholder="Search Scdule..">
+                <button><i class="ri-search-2-line"></i></button>
+            </div>
+            <div class="notification--profile">
+                <div class="picon lock">
+                    <i class="ri-lock-line"></i>
+                </div>
+                <div class="picon bell">
+                    <i class="ri-notification-2-line"></i>
+                </div>
+                <div class="picon chat">
+                    <i class="ri-wechat-2-line"></i>
+                </div>
+                <div class="picon profile">
+                    <img src="images/image7.jpg" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- End header section  -->
 
                 <li>
                     <a href="#">
@@ -100,7 +123,7 @@
            </div>
             
 
-            <!-- transaction histroy / -->
+            <!-- transaction histroy -->
             <div class="details">
                 <div class="recent">
                     <div class="cardHeader">
