--- a/src/index.html
+++ b/src/index.html
@@ -84,7 +84,7 @@
             </li>
 
             <li>
-              <a href="#" class="navbar-link icon-box">
+              <a href="all.html" class="navbar-link icon-box">
                 <span class="material-symbols-rounded  icon">settings</span>
 
                 <span>Settings</span>
