--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chase Bank</title>
-  <!-- 
-    - custom css link
-  -->
+  <!--- custom css link -->
   <link rel="stylesheet" href="./assets/css/style.css">
   <!-- - material icon link -->
 <link
@@ -55,7 +53,7 @@
           </li>
 
           <li class="navbar-item">
-            <a href="#about" class="navbar-link" data-navbar-link>About</a>
+            <a href="#blog" class="navbar-link" data-navbar-link>Blog</a>
           </li>
 
           <li class="navbar-item">
@@ -67,7 +65,7 @@
           </li>
 
           <li class="navbar-item">
-            <a href="#blog" class="navbar-link" data-navbar-link>Blog</a>
+            <a href="./login.html" class="navbar-link" data-navbar-link>Login</a>
           </li>
 
           <li class="navbar-item">
@@ -78,7 +76,7 @@
 
       </nav>
 
-      <a href="#" class="btn">
+      <a href="signup.html" class="btn">
         <ion-icon name="chevron-forward-outline" aria-hidden="true"></ion-icon>
 
         <span>Sign In</span>
@@ -115,8 +113,9 @@
              Cash Bank, Savings or interest, or travel rewards --- We have the right card to fit your need.
             
             </p>
+            <a href="account.html"> <button class="btn">Open Account</button></a>
 
-            <button class="btn">Open Account</button>
+           
 
           </div>
 
@@ -181,10 +180,6 @@
 
         </div>
       </section>
-
-
-
-
 
       <!-- 
         - #SERVICE
